<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JalinSuara</string>
    <string name="jalin_suara">Jalin Suara</string>
    <string name="psf">PSF</string>
    <string name="jalin_suara_twitter">\@jalin_suara</string>
    <string name="pnpm_support_twitter">\@PNPM_Support</string>
    <string name="action_settings">Pengaturan</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_submit">Kirim</string>
    <string name="action_reply">Balas</string>
    <string name="action_comment">Lihat Komentar</string>
    <string name="action_share_news">Tambah Cerita</string>
    <string name="action_search">Cari</string>
    <string name="action_profile">Profil</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_about">Tentang Aplikasi</string>
    <string name="see_license">Lihat License</string>
    <string name="about_content">${APP_NAME}\n${VERSION}\nAplikasi Android untuk Jalin Suara.\n
        Website dapat diakses pada http://jalinsuara.web.id\n                
        \u00A9 2013</string>
    <string name="pnpm_mandiri">PNPM Mandiri</string>
    <string name="loading">Sedang menunggu</string>
    <string name="error">Maaf, terdapat kesalahan</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="comment">Komentar</string>
    <string name="empty">Tidak ada data</string>
    <string name="password">Kata kunci</string>
    <string name="news">Berita</string>
    <string name="maps">Peta</string>
    <string name="close">Tutup</string>
    <string name="reply">Balas</string>
    <string name="loren_ipsum">Loren ipsum dolores</string>
    <string name="related_stories">Cerita terkait</string>
    <string name="sub_projects">Sub Proyek</string>
    <string name="pnpm_data">Data PNPM</string>
    <string name="share_news">Mulai berbagi</string>
    <string name="search">Cari</string>
    <string name="login">Login</string>
    <string name="drawer_open">Buka</string>
    <string name="drawer_close">Tutup</string>
    <string name="title_dashboard">Halaman Utama</string>
    <string name="title_login">Login</string>
    <string name="title_register">Daftar</string>
    <string name="title_about">Tentang Aplikasi</string>
    <string name="title_news_list">Daftar Cerita</string>
    <string name="title_project_list">Daftar Proyek</string>
    <string name="title_district_list">Daftar Distrik</string>
    <string name="title_sub_district_list">Daftar Sub Distrik</string>
    <string name="title_pnpm_data">Data PNPM</string>
    <string name="title_news">Cerita</string>
    <string name="title_share_news">Berbagi Cerita</string>
    <string name="title_maps">Peta</string>
    <string name="title_profile">Profil</string>
    <string name="title_license">License</string>
    <string name="error_fill_all_fields">Isi semua fields</string>
    <string name="error_logout_failed">Logout gagal</string>
    <string name="error_login_failed">Login gagal, periksa email dan password kembali</string>
    <string name="msg_logout_success">Logout berhasil</string>
    <string name="see_google_maps_legal_notice">Lihat Legal Notices</string>
    <string name="legal_notice">Legal Notices</string>
    <string name="register">Belum punya akun? silakan daftar disini..</string>
    <string name="propinsi_prompt">Pilih Propinsi</string>
    <string name="kecamatan_prompt">Pilih Kecamatan</string>
    <string name="kabupaten_prompt">Pilih Kabupaten</string>
    <string name="jejaring_prompt">Pilih Jejaring Sosial</string>

    <string-array name="propinsi_arrays">
        <item>Propinsi</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Sumatra Barat</item>
        <item>Bengkulu</item>
        <item>Singapore</item>
        <item>Sumatera Selatan</item>
        <item>Lampung</item>
    </string-array>
    <string-array name="kabupaten_arrays">
        <item>Kabupaten</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Sumatra Barat</item>
        <item>Bengkulu</item>
        <item>Singapore</item>
        <item>Sumatera Selatan</item>
        <item>Lampung</item>
    </string-array>
    <string-array name="kecamatan_arrays">
        <item>Kecamatan</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Sumatra Barat</item>
        <item>Bengkulu</item>
        <item>Singapore</item>
        <item>Sumatera Selatan</item>
        <item>Lampung</item>
    </string-array>
    <string-array name="jejaring_arrays">
        <item>Jejaring Sosial</item>
        <item>Riau</item>
        <item>Jambi</item>
        <item>Sumatra Barat</item>
        <item>Bengkulu</item>
        <item>Singapore</item>
        <item>Sumatera Selatan</item>
        <item>Lampung</item>
    </string-array>

    <string name="search_label">Cari di Jalin Suara</string>
    <string name="search_hint">Cari cerita atau proyek</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d hasil untuk pencarian \"%2$s\": </item>
        <item quantity="other">%1$d hasil untuk pencarian \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="search_no_result">Pencarian \"%s\" tidak menemukan hasil</string>
    <string name="searching_for">Mencari \"%s\"</string>
    <string name="link_fb_jalin_suara">https://www.facebook.com/jalin.suara</string>
    <string name="link_fb_psf">https://www.facebook.com/PNPMsupport</string>
    <string name="link_twitter_pnpm_support">https://twitter.com/PNPM_Support/</string>
    <string name="additional_information">Informasi Tambahan</string>
    <string name="fund_information">Informasi Dana</string>
    <string name="activity_information">Informasi Aktivitas</string>

</resources>