<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_profile"
        android:title="@string/action_profile"/>
    <!-- <item -->
    <!-- android:id="@+id/action_settings" -->
    <!-- android:orderInCategory="100" -->
    <!-- android:showAsAction="ifRoom" -->
    <!-- android:icon="@drawable/ic_settings" -->
    <!-- android:title="@string/action_settings"/> -->

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_about"
        android:title="@string/action_about"/>
    
	<item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
	
	<item android:id="@+id/action_sign_out"
          android:title="@string/action_sign_out"
          android:icon="@drawable/ic_sign_out"
          android:showAsAction="ifRoom"
           />
	<item android:id="@+id/action_sign_in"
          android:title="@string/action_sign_in"          
          android:showAsAction="ifRoom"
           />
</menu>